# classifymewhy

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  config.py  manage.py  pyproject.toml  render.yaml  requirements.txt
src/: __init__.py  main.py  utils.py  views.py
src/assets/: example_text_1.txt  example_text_2.txt  example_text_3.txt  example_text_4.txt  example_text_5.txt  example_text_6.txt  example_text_7.txt  example_text_8.txt  example_text_9.txt
src/static/css/: style.css
src/templates/: index.html
tests/: test_classify.py  test_views.py
